ingress_example/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: minhaapi.info
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
#  backend:
#    serviceName: ctm-service
#    servicePort: 3333
  rules:
    - host: minhaapi.info
      http:
        paths:
          - path: /rancher
            backend:
              serviceName: rancher
              servicePort: 80
          - path: /nginx
            backend:
              serviceName: nginx
              servicePort: 8080
